# silero-api-server

./: pyproject.toml  requirements.txt
silero_api_server/: tts.py
