[tool.poetry]
name = "silero-api-server"
version = "0.1.0"
description = ""
authors = ["admor"]
readme = "README.md"
packages = [{include = "silero_api_server"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
requests = "^2.31.0"
uvicorn = "^0.23.2"
loguru = "^0.7.2"
torch = { version = "^2.1.0+cu118", source = "torchcu118" }
torchaudio = { version = "^2.0.0+cu118", source = "torchcu118" }
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torchcu118"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = true
